--- a/index.html
+++ b/index.html
@@ -1,123 +1,211 @@
 <!DOCTYPE html>
 <html>
-<title>C H I S C O</title>
+<title>My Baby</title>
 <meta charset="UTF-8">
-  <meta name="description" content="A blog that tries to answer the question: Who is chisco?">
-  <meta name="keywords" content="Blog,Chisco,therealchisco,Pegando,Porte,y,la,Vara">
-  <meta name="author" content="therealchisco">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="stylesheet" href="/assets/css/main.css">
-<body>
+<style>
+html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
+<style>
 
+.w3-theme {color:#fff !important;background-color:#3f51b5 !important}
+.w3-theme-light {color:#000 !important;background-color:#e8eaf6 !important}
+.w3-theme-dark {color:#fff !important;background-color:#1a237e !important}
 
+.w3-theme-l5 {color:#000 !important;background-color:#e8eaf6 !important}
+.w3-theme-l4 {color:#000 !important;background-color:#c5cae9 !important}
+.w3-theme-l3 {color:#000 !important;background-color:#9fa8da !important}
+.w3-theme-l2 {color:#fff !important;background-color:#7986cb !important}
+.w3-theme-l1 {color:#fff !important;background-color:#5c6bc0 !important}
+.w3-theme-d1 {color:#fff !important;background-color:#3949ab !important}
+.w3-theme-d2 {color:#fff !important;background-color:#303f9f !important}
+.w3-theme-d3 {color:#fff !important;background-color:#283593 !important}
+.w3-theme-d4 {color:#fff !important;background-color:#1a237e !important}
 
-<!-- First Parallax Image with Logo Text -->
-<div class="bgimg-1 w3-display-container w3-opacity-min" id="home">
-  <div class="w3-display-middle w3-hide-small" style="white-space:nowrap;">
-      <div class="center">
-        <h4 class="center__text glitch is-glitching" data-text="May 2017">Coming Soon</h4>  
-        <br><br>  
-     </div>
-  </div>
-  <div class="w3-display-middle w3-center w3-padding-large w3-wid w3-hide-large w3-hide-medium w3-jumbo w3-align-center" style="white-space:nowrap;text-align:center; color:white;">
-        <h1><strong>Coming Soon</strong></h1>
-        <h2><strong>05.2017-ish</strong></h2>  
-        <br><br>  
-     </div>
-  </div>
+.w3-theme-action {color:#fff !important;background-color:#311b92 !important}
+.w3-text-theme {color:#1a237e !important}
+
+.w3-theme-pink {color:#000 !important; background-color:#f7cac9 !important}
+</style>
+<body class="w3-theme-light">
+
+<!-- Top container -->
+<div class="w3-bar w3-top w3-theme-d1 w3-large" style="z-index:4">
+  <button class="w3-bar-item w3-button w3-hide-large w3-hover-none w3-hover-text-light-grey" onclick="w3_open();">   
+      <img src="logobien.png" class="w3-circle w3-margin-right" style="width:50px"></button>
 </div>
+
+<!-- Sidebar/menu -->
+<nav class="w3-sidebar w3-collapse w3-theme-light w3-animate-left" style="z-index:3;width:300px;" id="mySidebar"><br>
+  <div class="w3-container w3-row">
+    <div class="w3-col s4">
+    </div>
+    <div class="w3-col s8 w3-bar">
+      <span>Your <strong>Baby</strong></span><br>
+      <a href="#" class="w3-bar-item w3-button"><i class="fa fa-envelope"></i></a>
+      <a href="#" class="w3-bar-item w3-button"><i class="fa fa-user"></i></a>
+      <a href="#" class="w3-bar-item w3-button"><i class="fa fa-cog"></i></a>
+    </div>
+  </div>
+  <hr>
+  <div class="w3-container">
+    <h5>Dashboard</h5>
+  </div>
+  <div class="w3-bar-block">
+    <a href="#" class="w3-bar-item w3-button w3-padding-16 w3-hide-large w3-dark-grey w3-hover-black" onclick="w3_close()" title="close menu"><i class="fa fa-remove fa-fw"></i>  Close Menu</a>
+    <a href="#" class="w3-bar-item w3-button w3-padding w3-blue"><i class="fa fa-users fa-fw"></i>  Overview</a>
+    <a href="#" class="w3-bar-item w3-button w3-padding"><i class="fa fa-eye fa-fw"></i>  Views</a>
+    <a href="#" class="w3-bar-item w3-button w3-padding"><i class="fa fa-users fa-fw"></i>  Traffic</a>
+    <a href="#" class="w3-bar-item w3-button w3-padding"><i class="fa fa-bullseye fa-fw"></i>  Geo</a>
+    <a href="#" class="w3-bar-item w3-button w3-padding"><i class="fa fa-diamond fa-fw"></i>  Orders</a>
+    <a href="#" class="w3-bar-item w3-button w3-padding"><i class="fa fa-bell fa-fw"></i>  News</a>
+    <a href="#" class="w3-bar-item w3-button w3-padding"><i class="fa fa-bank fa-fw"></i>  General</a>
+    <a href="#" class="w3-bar-item w3-button w3-padding"><i class="fa fa-history fa-fw"></i>  History</a>
+    <a href="#" class="w3-bar-item w3-button w3-padding"><i class="fa fa-cog fa-fw"></i>  Settings</a><br><br>
+  </div>
+</nav>
+
+
+<!-- Overlay effect when opening sidebar on small screens -->
+<div class="w3-overlay w3-hide-large w3-animate-opacity" onclick="w3_close()" style="cursor:pointer" title="close side menu" id="myOverlay"></div>
+
+<!-- !PAGE CONTENT! -->
+<div class="w3-main" style="margin-left:300px;margin-top:43px;">
+
+  <!-- Header -->
+  <header class="w3-container" style="padding-top:22px">
+    <h5><b><i class="fa fa-child"></i> Baby's Name here</b></h5>
+  </header>
+
+  <div class="w3-row-padding w3-margin-bottom">
+    <div class="w3-quarter">
+      <div class="w3-container w3-theme-d1 w3-padding-16">
+        <div class="w3-left"><i class="fa fa-heartbeat w3-xxxlarge"></i></div>
+        <div class="w3-right">
+          <h3>52</h3>
+        </div>
+        <div class="w3-clear"></div>
+        <h4>Pulse</h4>
+      </div>
+    </div>
+    <div class="w3-quarter">
+      <div class="w3-container w3-theme-d2 w3-padding-16">
+        <div class="w3-left"><i class="fa fa-thermometer-half w3-xxxlarge" ></i></div>
+        <div class="w3-right">
+          <h3>99</h3>
+        </div>
+        <div class="w3-clear"></div>
+        <h4>Temperature</h4>
+      </div>
+    </div>
+    <div class="w3-quarter">
+      <div class="w3-container w3-theme-d3 w3-padding-16">
+        <div class="w3-left"><i class="fa fa-bed w3-xxxlarge"></i></div>
+        <div class="w3-right">
+          <h3>23</h3>
+        </div>
+        <div class="w3-clear"></div>
+        <h4>Sleep</h4>
+      </div>
+    </div>
+    <div class="w3-quarter">
+      <div class="w3-container w3-theme-d4 w3-text-white w3-padding-16">
+        <div class="w3-left"><i class="fa fa-arrow-up w3-xxxlarge"></i></div>
+        <div class="w3-right">
+          <h3>Face up</h3>
+        </div>
+        <div class="w3-clear "></div>
+        <h4> Orientation</h4>
+      </div>
+    </div>
+  </div>
+
+  <div class="w3-panel">
+    <div class="w3-row-padding" style="margin:0 -16px">
+      <div class="w3-third w3-center">
+        <h5></h5>
+        <img src="baby1.png" style="width:100%" alt="Baby's Picture">
+      </div>
+      <div class="w3-twothird">
+        <h5 class="w3-center">Infos</h5>
+        <table class="w3-table-all w3-bordered w3-striped w3-white">
+          <tr class="w3-hover-pink">
+            <td><i class="fa fa-stethoscope w3-text-blue w3-large"></i></td>
+            <td>Breathing</td>
+            <td><i>Normal</i></td>
+          </tr>
+          <tr class="w3-hover-pink">
+            <td><i class="fa fa-bell w3-text-blue  w3-large"></i></td>
+            <td>Latest notification.</td>
+            <td><i>Crying, 40 mins ago</i></td>
+          </tr>
+          <tr class="w3-hover-pink">
+            <td><i class="fa fa-cutlery w3-text-blue w3-large"></i></td>
+            <td>Latest meal.</td>
+            <td><i>30 mins ago</i></td>
+          </tr>
+          <tr class="w3-hover-pink">
+            <td><i class="fa fa-tint w3-text-blue w3-large"></i></td>
+            <td>Latest diaper change.</td>
+            <td><i>2 hrs ago</i></td>
+          </tr>
+          <tr class="w3-hover-pink">
+            <td><i class="fa fa-bath w3-text-blue w3-large"></i></td>
+            <td>Latest bath.</td>
+            <td><i>10 hrs ago</i></td>
+          </tr>
+        </table>
+      </div>
+    </div>
+  </div>
+ 
+
+
+  <div class="w3-container">
+    <h5>Baby's Name Journal</h5>
+    <div class="w3-row">
+
+      <div class="w3-col m10 w3-container">
+        <h4>Dad <span class="w3-opacity w3-medium">Sep 29, 2017, 9:12 PM</span></h4>
+        <p>Charlie said his first words today! Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p><br>
+      </div>
+    </div>
+
+
+  <!-- Footer -->
+  <footer class="w3-container w3-padding-16 w3-theme-d1">
+
+  </footer>
+
+  <!-- End page content -->
+</div>
+
 <script>
+// Get the Sidebar
+var mySidebar = document.getElementById("mySidebar");
 
-function showParagraph() {
-    var x = document.getElementById("blabla","blibli","blublu","kekest");
-    if (x.className.indexOf("w3-show") == -1) {
-        x.className += " w3-show";
+// Get the DIV with overlay effect
+var overlayBg = document.getElementById("myOverlay");
+
+// Toggle between showing and hiding the sidebar, and add overlay effect
+function w3_open() {
+    if (mySidebar.style.display === 'block') {
+        mySidebar.style.display = 'none';
+        overlayBg.style.display = "none";
     } else {
-        x.className = x.className.replace(" w3-show", "");
+        mySidebar.style.display = 'block';
+        overlayBg.style.display = "block";
     }
 }
 
-
-function myMap()
-{
-  myCenter=new google.maps.LatLng(41.878114, -87.629798);
-  var mapOptions= {
-    center:myCenter,
-    zoom:12, scrollwheel: false, draggable: false,
-    mapTypeId:google.maps.MapTypeId.ROADMAP
-  };
-  var map=new google.maps.Map(document.getElementById("googleMap"),mapOptions);
-
-  var marker = new google.maps.Marker({
-    position: myCenter,
-  });
-  marker.setMap(map);
-}
-
-// Modal Image Gallery
-function onClick(element) {
-  document.getElementById("img01").src = element.src;
-  document.getElementById("modal01").style.display = "block";
-  var captionText = document.getElementById("caption");
-  captionText.innerHTML = element.alt;
-}
-
-function shmoke(id) {
-    var x = document.getElementById(id);
-    if (x.className.indexOf("w3-show") == -1) {
-        x.className += " w3-show";
-    } else { 
-        x.className = x.className.replace(" w3-show", "");
-    }
-}
-
-// Change style of navbar on scroll
-window.onscroll = function() {myFunction()};
-function myFunction() {
-    var navbar = document.getElementById("myNavbar");
-    if (document.body.scrollTop > 100 || document.documentElement.scrollTop > 100) {
-        navbar.className = "w3-bar" + " w3-card-2" + " w3-animate-top" + " w3-white";
-    } else {
-        navbar.className = navbar.className.replace(" w3-card-2 w3-animate-top w3-white", "");
-    }
-}
-
-
-// Used to toggle the menu on small screens when clicking on the menu button
-function toggleFunction() {
-    var x = document.getElementById("navDemo");
-    if (x.className.indexOf("w3-show") == -1) {
-        x.className += " w3-show";
-    } else {
-        x.className = x.className.replace(" w3-show", "");
-    }
-}
-
-function change(el)
-{
-    if ( el.value === "More" )
-        el.value = "Less";
-    else
-        el.value = "More";
-}
-
-function pinga(id) {
-    var x = document.getElementById(id);
-    if (x.className.indexOf("w3-show") == -1) {
-        x.className += " w3-show";
-    } else {
-        x.className = x.className.replace(" w3-show", "");
-    }
+// Close the sidebar with the close button
+function w3_close() {
+    mySidebar.style.display = "none";
+    overlayBg.style.display = "none";
 }
 </script>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBu-916DdpKAjTmJNIgngS6HL_kDIKU0aU&callback=myMap"></script>
-<!--
-To use this code on your website, get a free API key from Google.
-Read more at: https://www.w3schools.com/graphics/google_maps_basic.asp
--->
 
 </body>
 </html>
